# my-typster

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-08.jsonl  2026-07-12.jsonl  2026-07-13.jsonl
src/mytypster/: cli.py  typster.py
tests/: conftest.py  test_typster.py
